# portfolio-thesis-engine

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  SPEC_PHASE_0.md  SPEC_PHASE_1.md  docker-compose.yml  pyproject.toml
api/: .env.example  Dockerfile  __init__.py  auth.py  config.py  main.py
api/routes/: health.py  pipelines.py  tickers.py  yamls.py
api/schemas/: responses.py
api/services/: filesystem_reader.py  pipeline_runner.py  sqlite_reader.py  yaml_manager.py
api/tests/: conftest.py  test_health.py  test_pipelines.py  test_tickers.py  test_yamls.py
docs/: architecture.md  claude_ai_extraction_guide.md  document_types.md  phase1_architecture.md  phase1_schemas.md  phase2_architecture.md  raw_extraction_schema.md  required_notes_by_profile.md  schemas.md
docs/guides/: multi_currency_guide.md  schema_evolution_guide.md  sign_convention_guide.md  unit_scale_guide.md  unknown_sections_protocol.md
docs/operations/: api_deployment.md  api_openapi.json
docs/reference/: catch_all_philosophy.md  cli_reference.md  common_pitfalls_library.md  cross_statement_validation_checklist.md  operational_kpis_by_sector.md
docs/roadmap/: phase_1_5_15_planning.md  phase_2_sprint_2a_2_polish.md  phase_2_sprint_3_followups.md
docs/schemas/: capital_allocation_schema.md  forecast_snapshots_schema.md  leading_indicators_schema_reference.md  scenarios_schema.md
docs/sprint_reports/: 01_setup_basico.md  02_shared_utilities.md  03_schemas.md  04_storage_base.md  05_storage_completo.md  06_llm_orchestrator.md  07_market_data.md  08_guardrails.md  09_cli.md  10_ui_stub.md  11_devops.md  14_final_check.md  15_fmp_fix_plus_yfinance.md  16_phase1_ingestion.md  17_phase1_section_extractor_toc.md  18_phase1_section_extractor_parsers.md  20_phase1_cross_check.md  (+17 more)
scripts/: backup.sh  install_docker.sh  provision_vps.sh
systemd/: pte-backup.service  pte-backup.timer  pte-streamlit.service
tests/: conftest.py
web/: .env.local.example  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
(+358 files in other folders)
